# nextjs_axtix

./: .gitignore
Docker/: docker-compose.yml
backend/: Cargo.toml
backend/migrations/2023-09-26-074717_user_data/: down.sql  up.sql
backend/src/: auth.rs  main.rs  schema.rs
frontend/src/app/: layout.tsx
frontend/src/app/posts/: page.tsx
frontend/src/components/organisms/: navbar.tsx  postcard.tsx
frontend/src/utils/: api.ts
