[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-session = { version = "0.8", features = ["redis-actor-session"] }
diesel = { version = "2", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
octocrab = "0.30.1"
secrecy = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
